SERVER-66851 Internal session pool should use parent sessions as keys for child session map

(cherry picked from commit 37e28d05ca12d2b3835bbe2145cbe258872e7ed6)